# artifact_vision_mvp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
app/: config.py  main.py  schemas.py
app/services/: classifier.py  container.py  encoder.py  image_io.py  ollama_vision.py  types.py  vector_store.py
artifact_vision_mvp.egg-info/: PKG-INFO  SOURCES.txt
data/: dataset.example.csv
data/dataset/metadata/: artifacts.csv
scripts/: import_dataset.py  train_linear_heads.py  validate_dataset.py
tests/: test_classifier.py  test_encoder_device.py
